--- a/FiguresWF/FiguresWF.csproj
+++ b/FiguresWF/FiguresWF.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Rect.cs" />
     <Compile Include="Square.cs" />
+    <Compile Include="Trapezoid.cs" />
+    <Compile Include="Triangle.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
